adapted the tutorial to the new AanetReader

--- a/notebooks/AanetReader_tutorial.ipynb
+++ b/notebooks/AanetReader_tutorial.ipynb
@@ -37,6 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test samples directory - aanet test file\n",
     "files_path = Path.cwd().parent / 'tests/samples' \n",
     "aanet_file = files_path / 'aanet_v2.0.0.root'"
    ]
@@ -45,9 +46,90 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Number of events: 10\n",
+       "Events keys are:\n",
+       "\tid\n",
+       "\tdet_id\n",
+       "\tmc_id\n",
+       "\trun_id\n",
+       "\tmc_run_id\n",
+       "\tframe_index\n",
+       "\ttrigger_mask\n",
+       "\ttrigger_counter\n",
+       "\toverlays\n",
+       "\thits\n",
+       "\ttrks\n",
+       "\tw\n",
+       "\tw2list\n",
+       "\tw3list\n",
+       "\tmc_t\n",
+       "\tmc_hits\n",
+       "\tmc_trks\n",
+       "\tcomment\n",
+       "\tindex\n",
+       "\tflags\n",
+       "\tt.fSec\n",
+       "\tt.fNanoSec\n",
+       "Hits keys are:\n",
+       "\thits.id\n",
+       "\thits.dom_id\n",
+       "\thits.channel_id\n",
+       "\thits.tdc\n",
+       "\thits.tot\n",
+       "\thits.trig\n",
+       "\thits.pmt_id\n",
+       "\thits.t\n",
+       "\thits.a\n",
+       "\thits.pos.x\n",
+       "\thits.pos.y\n",
+       "\thits.pos.z\n",
+       "\thits.dir.x\n",
+       "\thits.dir.y\n",
+       "\thits.dir.z\n",
+       "\thits.pure_t\n",
+       "\thits.pure_a\n",
+       "\thits.type\n",
+       "\thits.origin\n",
+       "\thits.pattern_flags\n",
+       "Tracks keys are:\n",
+       "\ttrks.fUniqueID\n",
+       "\ttrks.fBits\n",
+       "\ttrks.usr_data\n",
+       "\ttrks.usr_names\n",
+       "\ttrks.id\n",
+       "\ttrks.pos.x\n",
+       "\ttrks.pos.y\n",
+       "\ttrks.pos.z\n",
+       "\ttrks.dir.x\n",
+       "\ttrks.dir.y\n",
+       "\ttrks.dir.z\n",
+       "\ttrks.t\n",
+       "\ttrks.E\n",
+       "\ttrks.len\n",
+       "\ttrks.lik\n",
+       "\ttrks.type\n",
+       "\ttrks.rec_type\n",
+       "\ttrks.rec_stages\n",
+       "\ttrks.status\n",
+       "\ttrks.mother_id\n",
+       "\ttrks.fitinf\n",
+       "\ttrks.hit_ids\n",
+       "\ttrks.error_matrix\n",
+       "\ttrks.comment"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "reader = AanetReader(aanet_file)"
+    "reader = AanetReader(aanet_file)\n",
+    "reader"
    ]
   },
   {
@@ -58,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "<Table [<Row 0> <Row 1> <Row 2> ... <Row 7> <Row 8> <Row 9>] at 0x7f315b3f9fd0>"
+       "<Table [<Row 0> <Row 1> <Row 2> ... <Row 7> <Row 8> <Row 9>] at 0x7f57ac134810>"
       ]
      },
      "execution_count": 5,
@@ -74,29 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ChunkedArray [5971 5971 5971 ... 5971 5971 5971] at 0x7f315b3a50d0>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# reading all data from a specific branch from events data (data is \n",
-    "# ordered in the same order as in Aanet event file)\n",
-    "reader.read_event('run_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -105,41 +165,19 @@
        "5971"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# getting the run_id for a specific event (event 5 for example)\n",
-    "reader.read_event('run_id')[5]"
+    "reader[5]['run_id']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"'whatever' could not be found or is a fake branch.\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "# the user is reminded to always specify the \"correct\" event key in the\n",
-    "# Aanet event file\n",
-    "try:\n",
-    "    reader.read_event('whatever')\n",
-    "except KeyError as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -148,19 +186,19 @@
        "60"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# one can check how many hits are in event 5\n",
-    "reader.read_event('hits')[5]"
+    "reader[5]['hits']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -169,14 +207,36 @@
        "56"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# one can also check how many tracks are in event 5\n",
-    "reader.read_event('trks')[5]"
+    "reader[5]['trks']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"'whatever' is not a valid key or is a fake branch.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the user is reminded to always specify the \"correct\" event/hits/tracks \n",
+    "# key in the Aanet event file\n",
+    "try:\n",
+    "    reader['whatever']\n",
+    "except KeyError as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -188,28 +248,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [[806451572 806451572 806451572 ... 809544061 809544061 809544061] [806451572 806451572 806451572 ... 809524432 809526097 809544061] [806451572 806451572 806451572 ... 809544061 809544061 809544061] ... [806451572 806455814 806465101 ... 809526097 809544058 809544061] [806455814 806455814 806455814 ... 809544061 809544061 809544061] [806455814 806455814 806455814 ... 809544058 809544058 809544061]] at 0x7f315b3a5b10>"
+       "<ChunkedArray [[806451572 806451572 806451572 ... 809544061 809544061 809544061] [806451572 806451572 806451572 ... 809524432 809526097 809544061] [806451572 806451572 806451572 ... 809544061 809544061 809544061] ... [806451572 806455814 806465101 ... 809526097 809544058 809544061] [806455814 806455814 806455814 ... 809544061 809544061 809544061] [806455814 806455814 806455814 ... 809544058 809544058 809544061]] at 0x7f57997ee990>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# reading all data from a specific branch in hits data:\n",
-    "reader.read_hits('hits.dom_id')"
+    "# reading all data from a specific branch in hits data: for example \n",
+    "# 'hits.dom_id'\n",
+    "reader['hits.dom_id']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +289,7 @@
        "      dtype=int32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,51 +297,7 @@
    "source": [
     "# the user can access hits.dom_id data for a specific event (for example \n",
     "# event 5)\n",
-    "reader.read_hits('hits.dom_id')[5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "60"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# We previsouly checked (using reader.event_reader('hits')[5]) that event\n",
-    "# 5 has 218 hits, now we can see that reader.hits_reader('hits.dom_id')[5]\n",
-    "# has exaclty 218 dom ids as well! \n",
-    "len(reader.read_hits('hits.dom_id')[5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "806455814"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# one can access a dom id of the first hit \n",
-    "reader.read_hits('hits.dom_id')[5][0]"
+    "reader['hits.dom_id'][5]"
    ]
   },
   {
@@ -289,20 +306,42 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"'whatever' is not a valid hits key.\"\n"
-     ]
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# once again, the user is reminded to always use the hits keys stored i Aanet event\n",
-    "# file\n",
-    "try:\n",
-    "    reader.read_hits('whatever')\n",
-    "except KeyError as e:\n",
-    "    print(e)"
+    "# We previsouly checked (using reader[5]['hits']) that event\n",
+    "# 5 has 60 hits, now we can see that reader['hits.dom_id'][5]\n",
+    "# has exaclty 60 dom ids as well! \n",
+    "len(reader['hits.dom_id'][5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "806455814"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# one can access a dom id of the first hit \n",
+    "reader['hits.dom_id'][5][0]"
    ]
   },
   {
@@ -314,28 +353,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [[-0.872885221293917 -0.872885221293917 -0.872885221293917 ... -0.6631226836266504 -0.5680647731737454 -0.5680647731737454] [-0.8351996698137462 -0.8351996698137462 -0.8351996698137462 ... -0.7485107718446855 -0.8229838871876581 -0.239315690284641] [-0.989148723802379 -0.989148723802379 -0.989148723802379 ... -0.9350162572437829 -0.88545604390297 -0.88545604390297] ... [-0.5704611045902105 -0.5704611045902105 -0.5704611045902105 ... -0.9350162572437829 -0.4647231989130516 -0.4647231989130516] [-0.9779941383490359 -0.9779941383490359 -0.9779941383490359 ... -0.88545604390297 -0.88545604390297 -0.8229838871876581] [-0.7396916780974963 -0.7396916780974963 -0.7396916780974963 ... -0.6631226836266504 -0.7485107718446855 -0.7485107718446855]] at 0x7f315b3b0f10>"
+       "<ChunkedArray [[-0.872885221293917 -0.872885221293917 -0.872885221293917 ... -0.6631226836266504 -0.5680647731737454 -0.5680647731737454] [-0.8351996698137462 -0.8351996698137462 -0.8351996698137462 ... -0.7485107718446855 -0.8229838871876581 -0.239315690284641] [-0.989148723802379 -0.989148723802379 -0.989148723802379 ... -0.9350162572437829 -0.88545604390297 -0.88545604390297] ... [-0.5704611045902105 -0.5704611045902105 -0.5704611045902105 ... -0.9350162572437829 -0.4647231989130516 -0.4647231989130516] [-0.9779941383490359 -0.9779941383490359 -0.9779941383490359 ... -0.88545604390297 -0.88545604390297 -0.8229838871876581] [-0.7396916780974963 -0.7396916780974963 -0.7396916780974963 ... -0.6631226836266504 -0.7485107718446855 -0.7485107718446855]] at 0x7f57997f8d90>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# reading all data from a specific branch in tracks data:\n",
-    "reader.read_tracks('trks.dir.z')"
+    "reader['trks.dir.z']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +394,7 @@
        "       -0.97094183])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,27 +402,16 @@
    "source": [
     "# the user can access trks.dir.z data for a specific event (for example \n",
     "# event 5)\n",
-    "reader.read_tracks('trks.dir.z')[5]"
+    "reader['trks.dir.z'][5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "56"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# We previsouly checked (using reader.event_reader('trks')[5]) that event\n",
+    "# We previsouly checked (using reader[5]['trks']) that event\n",
     "# 5 has 56 tracks, now we can see that reader.hits_reader('hits.dom_id')[5]\n",
     "# has exaclty 56 values of trks.dir.z as well! \n",
     "len(reader.read_tracks('trks.dir.z')[5])"
@@ -391,20 +419,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.6024604933159441"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# one can access the first trks.dir.z from event 5 using \n",
     "reader.read_tracks('trks.dir.z')[5][0]"
@@ -412,17 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"'whatever' is not a valid tracks key.\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# once again, the user is reminded to always use the tracks keys stored in Aanet\n",
     "# event file\n",
@@ -434,24 +443,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-713f816108bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m'test'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'test' + 1\n"
+    "reader['trks.dir.z']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.array(reader[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
