--- a/notebooks/AanetReader_tutorial.ipynb
+++ b/notebooks/AanetReader_tutorial.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/zineb/km3net/km3net/km3io/notebooks', '/home/zineb/miniconda3/envs/km3pipe/lib/python37.zip', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7/lib-dynload', '', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7/site-packages', '/home/zineb/km3net/km3net/km3io', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7/site-packages/IPython/extensions', '/home/zineb/.ipython', '/home/zineb/km3net/km3net/km3io']\n"
+     ]
+    }
+   ],
    "source": [
     "# Add file to current python path\n",
     "from pathlib import Path\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -44,7 +52,6 @@
     {
      "data": {
       "text/plain": [
-       "Number of events: 10\n",
        "Events keys are:\n",
        "\tid\n",
        "\tdet_id\n",
@@ -113,10 +120,56 @@
        "\ttrks.fitinf\n",
        "\ttrks.hit_ids\n",
        "\ttrks.error_matrix\n",
-       "\ttrks.comment"
+       "\ttrks.comment\n",
+       "Mc hits keys are:\n",
+       "\tmc_hits.id\n",
+       "\tmc_hits.dom_id\n",
+       "\tmc_hits.channel_id\n",
+       "\tmc_hits.tdc\n",
+       "\tmc_hits.tot\n",
+       "\tmc_hits.trig\n",
+       "\tmc_hits.pmt_id\n",
+       "\tmc_hits.t\n",
+       "\tmc_hits.a\n",
+       "\tmc_hits.pos.x\n",
+       "\tmc_hits.pos.y\n",
+       "\tmc_hits.pos.z\n",
+       "\tmc_hits.dir.x\n",
+       "\tmc_hits.dir.y\n",
+       "\tmc_hits.dir.z\n",
+       "\tmc_hits.pure_t\n",
+       "\tmc_hits.pure_a\n",
+       "\tmc_hits.type\n",
+       "\tmc_hits.origin\n",
+       "\tmc_hits.pattern_flags\n",
+       "Mc tracks keys are:\n",
+       "\tmc_trks.fUniqueID\n",
+       "\tmc_trks.fBits\n",
+       "\tmc_trks.usr_data\n",
+       "\tmc_trks.usr_names\n",
+       "\tmc_trks.id\n",
+       "\tmc_trks.pos.x\n",
+       "\tmc_trks.pos.y\n",
+       "\tmc_trks.pos.z\n",
+       "\tmc_trks.dir.x\n",
+       "\tmc_trks.dir.y\n",
+       "\tmc_trks.dir.z\n",
+       "\tmc_trks.t\n",
+       "\tmc_trks.E\n",
+       "\tmc_trks.len\n",
+       "\tmc_trks.lik\n",
+       "\tmc_trks.type\n",
+       "\tmc_trks.rec_type\n",
+       "\tmc_trks.rec_stages\n",
+       "\tmc_trks.status\n",
+       "\tmc_trks.mother_id\n",
+       "\tmc_trks.fitinf\n",
+       "\tmc_trks.hit_ids\n",
+       "\tmc_trks.error_matrix\n",
+       "\tmc_trks.comment"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +187,30 @@
     {
      "data": {
       "text/plain": [
-       "<Table [<Row 0> <Row 1> <Row 2> ... <Row 7> <Row 8> <Row 9>] at 0x7fb2342f1f10>"
+       "['trks.fUniqueID',\n",
+       " 'trks.fBits',\n",
+       " 'trks.usr_data',\n",
+       " 'trks.usr_names',\n",
+       " 'trks.id',\n",
+       " 'trks.pos.x',\n",
+       " 'trks.pos.y',\n",
+       " 'trks.pos.z',\n",
+       " 'trks.dir.x',\n",
+       " 'trks.dir.y',\n",
+       " 'trks.dir.z',\n",
+       " 'trks.t',\n",
+       " 'trks.E',\n",
+       " 'trks.len',\n",
+       " 'trks.lik',\n",
+       " 'trks.type',\n",
+       " 'trks.rec_type',\n",
+       " 'trks.rec_stages',\n",
+       " 'trks.status',\n",
+       " 'trks.mother_id',\n",
+       " 'trks.fitinf',\n",
+       " 'trks.hit_ids',\n",
+       " 'trks.error_matrix',\n",
+       " 'trks.comment']"
       ]
      },
      "execution_count": 5,
@@ -143,9 +219,7 @@
     }
    ],
    "source": [
-    "# big lazyarray with ALL file data!\n",
-    "lazy_data = reader.lazy_data\n",
-    "lazy_data"
+    "reader.tracks_keys"
    ]
   },
   {
@@ -156,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "5971"
+       "<Table [<Row 0> <Row 1> <Row 2> ... <Row 7> <Row 8> <Row 9>] at 0x7f83f9d62c10>"
       ]
      },
      "execution_count": 6,
@@ -165,8 +239,9 @@
     }
    ],
    "source": [
-    "# getting the run_id for a specific event (event 5 for example)\n",
-    "reader[5]['run_id']"
+    "# big lazyarray with ALL file data!\n",
+    "lazy_data = reader._lazy_data\n",
+    "lazy_data"
    ]
   },
   {
@@ -177,10 +252,31 @@
     {
      "data": {
       "text/plain": [
-       "60"
+       "<ChunkedArray [5971 5971 5971 ... 5971 5971 5971] at 0x7f83f9d2cdd0>"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# getting the run_id for a specific event (event 5 for example)\n",
+    "reader['run_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +297,7 @@
        "56"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,24 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"'whatever' is not a valid key or is a fake branch.\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# the user is reminded to always specify the \"correct\" event/hits/tracks \n",
-    "# key in the Aanet event file\n",
-    "try:\n",
-    "    reader['whatever']\n",
-    "except KeyError as e:\n",
-    "    print(e)"
+    "# # the user is reminded to always specify the \"correct\" event/hits/tracks \n",
+    "# # key in the Aanet event file\n",
+    "# try:\n",
+    "#     reader['whatever']\n",
+    "# except KeyError as e:\n",
+    "#     print(e)"
    ]
   },
   {
@@ -242,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [[806451572 806451572 806451572 ... 809544061 809544061 809544061] [806451572 806451572 806451572 ... 809524432 809526097 809544061] [806451572 806451572 806451572 ... 809544061 809544061 809544061] ... [806451572 806455814 806465101 ... 809526097 809544058 809544061] [806455814 806455814 806455814 ... 809544061 809544061 809544061] [806455814 806455814 806455814 ... 809544058 809544058 809544061]] at 0x7fb23426e190>"
+       "<ChunkedArray [[806451572 806451572 806451572 ... 809544061 809544061 809544061] [806451572 806451572 806451572 ... 809524432 809526097 809544061] [806451572 806451572 806451572 ... 809544061 809544061 809544061] ... [806451572 806455814 806465101 ... 809526097 809544058 809544061] [806455814 806455814 806455814 ... 809544061 809544061 809544061] [806455814 806455814 806455814 ... 809544058 809544058 809544061]] at 0x7f83f9a13890>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +371,7 @@
        "      dtype=int32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +393,7 @@
        "60"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +416,7 @@
        "806455814"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,16 +435,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [[-0.872885221293917 -0.872885221293917 -0.872885221293917 ... -0.6631226836266504 -0.5680647731737454 -0.5680647731737454] [-0.8351996698137462 -0.8351996698137462 -0.8351996698137462 ... -0.7485107718446855 -0.8229838871876581 -0.239315690284641] [-0.989148723802379 -0.989148723802379 -0.989148723802379 ... -0.9350162572437829 -0.88545604390297 -0.88545604390297] ... [-0.5704611045902105 -0.5704611045902105 -0.5704611045902105 ... -0.9350162572437829 -0.4647231989130516 -0.4647231989130516] [-0.9779941383490359 -0.9779941383490359 -0.9779941383490359 ... -0.88545604390297 -0.88545604390297 -0.8229838871876581] [-0.7396916780974963 -0.7396916780974963 -0.7396916780974963 ... -0.6631226836266504 -0.7485107718446855 -0.7485107718446855]] at 0x7fb234277590>"
+       "<ChunkedArray [[-0.872885221293917 -0.872885221293917 -0.872885221293917 ... -0.6631226836266504 -0.5680647731737454 -0.5680647731737454] [-0.8351996698137462 -0.8351996698137462 -0.8351996698137462 ... -0.7485107718446855 -0.8229838871876581 -0.239315690284641] [-0.989148723802379 -0.989148723802379 -0.989148723802379 ... -0.9350162572437829 -0.88545604390297 -0.88545604390297] ... [-0.5704611045902105 -0.5704611045902105 -0.5704611045902105 ... -0.9350162572437829 -0.4647231989130516 -0.4647231989130516] [-0.9779941383490359 -0.9779941383490359 -0.9779941383490359 ... -0.88545604390297 -0.88545604390297 -0.8229838871876581] [-0.7396916780974963 -0.7396916780974963 -0.7396916780974963 ... -0.6631226836266504 -0.7485107718446855 -0.7485107718446855]] at 0x7f83f9b65f90>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +476,7 @@
        "       -0.97094183])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +498,7 @@
        "56"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +521,7 @@
        "-0.6024604933159441"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
